Adds amd64 error and signal strings in pkg/syscall
Also adjusts the gitignore to track the generated zerrorstring files.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ src/pkg/runtime/mkversion
 src/pkg/runtime/z*
 src/pkg/runtime/parlib/z*
 src/pkg/syscall/z*akaros*
+!src/pkg/syscall/zerrorstrings_akaros_*.go
 src/pkg/unicode/maketables
 src/pkg/*.*/
 test/pass.out
